# Baka-MPlayer

./: .gitignore  .travis.yml  404.html  Baka-MPlayer.pro  CHANGELOG.rst  CMakeLists.txt  README.md  configure  configure.sh  index.html  mainwindow.cpp  mainwindow.h  mainwindow.ui  make.sh  redirects.json  travis-deps  travis.sh
.github/: FUNDING.yml
.github/workflows/: deploy_website.yml
Baka MPlayer/: Baka-MPlayer.pro  customslider.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mpvhandler.cpp  mpvhandler.h  playlistmanager.cpp  playlistmanager.h  rsclist.qrc  settingsmanager.cpp  settingsmanager.h  updatemanager.cpp  updatemanager.h
Baka MPlayer/ui/: LocationDialog.ui  aboutdialog.h  aboutdialog.ui  infodialog.cpp  infodialog.h  infodialog.ui  inputdialog.cpp  inputdialog.ui  jumpdialog.cpp  jumpdialog.ui  lightdialog.h  locationdialog.cpp  locationdialog.h  locationdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  updatedialog.ui
Baka MPlayer/widgets/: customlabel.h  customlistwidget.cpp  customlistwidget.h  customslider.cpp  customslider.h  indexbutton.cpp  indexbutton.h  openbutton.h  playlistmanager.cpp  playlistmanager.h  playpausebutton.h  seekbar.cpp  seekbar.h
Baka MPlayer/windows/: AboutDialog.ui  InfoDialog.ui  JumpDialog.ui  MainWindow.OLD.h  aboutdialog.cpp  aboutdialog.ui  infodialog.cpp  infodialog.h  jumpdialog.cpp  jumpdialog.h  locationdialog.cpp  locationdialog.h  locationdialog.ui  locationwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
DOCS/: baka-mplayer.man  baka-mplayer.md  commands.md  settings.md  translations.md
about/: index.html
arch/: PKGBUILD
arch/baka-mplayer/: PKGBUILD  baka-mplayer.install
arch/baka-mplayer-git/: PKGBUILD
css/: global.css  help.css  home.css  installation.css
debian/: baka-mplayer.xpm  changelog  control  copyright  install  menu  rules
debian_old/: rules
downloads/: index.html
etc/: README.md  baka-mplayer.desktop
etc/doc/: baka-mplayer.man  baka-mplayer.md  bakamplayer.man  manual.md
etc/sbin/: PKGBUILD  bakamplayer.sh  create_windows_release.sh  mpv.sh  mxe.sh
etc/sbin/linux/: debian_based.sh  opensuse.sh
etc/sbin/pkgbuild/: PKGBUILD  baka-mplayer.desktop
etc/sbin/windows/: README.md
etc/sbin/windows/cross-compilation/: baka-build.sh  bakamplayer.sh  convert_from_old.sh  create_windows_release.sh  mpv.sh
etc/sbin/windows/cross-compilation/src/patches/: mxe-fontconf.patch  mxe-fontconfig.patch
etc/travis/: .travis.yml  travis-deps
help/: index.html
history/: index.html
installation/: index.html
linux/: README.md  fedora.sh  opensuse.sh
res/: README  README.md  mxe.sh
source/: Baka-MPlayer.pro  mpvhandler.cpp  playlistmanager.cpp
source/ui/: infodialog.h  infodialog.ui  inputdialog.h  inputdialog.ui  jumpdialog.h  jumpdialog.ui  lightdialog.cpp  locationdialog.ui  updatedialog.cpp  updatedialog.ui
source/widgets/: playpausebutton.cpp  seekbar.h
src/: Baka-MPlayer.pro  CMakeLists.txt  baka-mplayer-en.ts  bakacommands.cpp  bakaengine.cpp  bakaengine.h  gesturehandler.cpp  gesturehandler.h  main.cpp  mpvhandler.cpp  mpvhandler.h  mpvtypes.h  overlay.cpp  overlay.h  overlayhandler.cpp  overlayhandler.h  platform.h  playlistmanager.cpp  playlistmanager.h  recent.h  rsclist.qrc  rsclist.qrc.in  settings.cpp  settings.h  settingsmanager.cpp  settingsmanager.h  translations.pri  translations.qrc  updatemanager.cpp  updatemanager.h  util.cpp  util.h  win_rsclist.qrc
src/img/: logo.icns
src/platform/: linux.cpp  osx.cpp  win.cpp  win32.cpp  win64.cpp  x11.cpp
src/translations/: baka-mplayer_de.ts  baka-mplayer_en.ts  baka-mplayer_es.ts  baka-mplayer_fr.ts  baka-mplayer_hr.ts  baka-mplayer_it.ts  baka-mplayer_ka.ts  baka-mplayer_ko.qm  baka-mplayer_ko.ts  baka-mplayer_nl.ts  baka-mplayer_pt.qm  baka-mplayer_pt.ts  baka-mplayer_pt_BR.ts  baka-mplayer_ru.ts  baka-mplayer_tr.ts  baka-mplayer_vi.ts  baka-mplayer_zh.qm  baka-mplayer_zh.ts  baka-mplayer_zh_CN.ts
src/ui/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  creategroupdialog.ui  dimdialog.cpp  dimdialog.h  infodialog.cpp  infodialog.h  infodialog.ui  inputdialog.cpp  inputdialog.h  inputdialog.ui  ircdialog.cpp  ircdialog.h  ircdialog.ui  jumpdialog.cpp  jumpdialog.h  jumpdialog.ui  keydialog.cpp  keydialog.h  keydialog.ui  lightdialog.cpp  locationdialog.cpp  locationdialog.h  locationdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.ui  screenshotdialog.cpp  screenshotdialog.h  screenshotdialog.ui  updatedialog.cpp  updatedialog.h  updatedialog.ui
src/versions/: 1_9_9.cpp  2_0_0.cpp  2_0_1.cpp  2_0_2.cpp  2_0_3.cpp
src/widgets/: customlabel.cpp  customlineedit.cpp  customlineedit.h  customlistwidget.cpp  customlistwidget.h  customslider.cpp  customslider.h  customsplitter.cpp  customsplitter.h  dimdialog.cpp  dimdialog.h  indexbutton.cpp  openbutton.cpp  playlistwidget.cpp  playlistwidget.h  playpausebutton.h  seekbar.cpp  seekbar.h
website/: 404.html  Gemfile  README.md  _config.yml  about.html  help.html  help.php  history.html  home.html  index.php  installation.html  layout.php  version.php  version_linux  version_windows
website/_layouts/: primary.html
website/css/: global.css  help.css  history.css  home.css  installation.css
windows/cross-compilation/: baka-build.sh
windows/cross-compilation/src/patches/: mxe-ffmpeg.patch  mxe-fontconfig.patch  mxe-vsnprintf.patch
